cluster/apps/storage/nfs-subdir-external-provisioner/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nfs-subdir-external-provisioner
  namespace: default
spec:
  description: Allow provisioner API access; NFS volume mounts are handled by the node
  endpointSelector:
    matchLabels:
      app: nfs-subdir-external-provisioner
      release: nfs-subdir-external-provisioner
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  enableDefaultDeny:
    ingress: true
    egress: true
  log:
    value: nfs-subdir-external-provisioner
